--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -64,6 +64,7 @@ block content
                     small.reviewTimestamp 16 July 2013
                   .col-xs-12
                     p What a great place. I can't say enough good things about it.
+              .row
                 .review
                   .well.well-sm.review-header
                     span.rating
