--- a/app_server/views/location-review-form.jade
+++ b/app_server/views/location-review-form.jade
@@ -6,7 +6,9 @@ block content
       h1 Review Starcups
   .row
     .col-xs-12.col-md-6
-      form.form-horizontal(action="/location", method="get", role="form")
+      form.form-horizontal(action="", method="post", role="form")
+        - if (error == "val")
+          .alert.alert-danger(role="alert") All fields required, please try again
         .form-group
           label.col-xs-10.col-sm-2.control-label(for="name") Name
           .col-xs-12.col-sm-10
